// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <FormGroup> to render disabled 1`] = `
<div
  className="gds-form-group custom-class gds-form-group--warning gds-form-group--disabled"
>
  <input
    type="text"
  />
</div>
`;

exports[`Expect <FormGroup> to render inline 1`] = `
<div
  className="gds-form-group custom-class gds-form-group--warning gds-form-group--inline"
>
  <input
    type="text"
  />
</div>
`;

exports[`Expect <FormGroup> to render properly 1`] = `
<div
  className="gds-form-group custom-class gds-form-group--warning"
>
  <input
    type="text"
  />
</div>
`;
